[tool.poetry]
name = "analysis-template"
version = "0.1.0"
description = ""
authors = ["Tomoyuki Shimizu <smz2develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
rpy2 = "^3.4.5"
pandas = "^1.3.4"
jupyterlab = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
